--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/ig_purple</item>
+        <item name="colorPrimary">@color/grey_3_66_transparent</item>
         <item name="colorPrimaryDark">@color/black_25_transparent</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
